# Crowded_analysis

./: .gitignore  LICENSE  README.md  area_test.py  cam2world_transform_test.py  camera_calibrate.py  convert.py  draw_area.py  main.py  observe_and_view_transform.py  param.txt  requirements.txt  script.sh  yolo.py
2d_3d_transformation/: 2d_3d_transform.cpp  CMakeLists.txt
camera_calibrate/: calibrate_img.py  format.txt  video_to_frame.py
camera_calibrate/cam2world_coordinate/: CA-108.txt  CB-248.txt  CH-108.txt  CH-205.txt  Carbao-108.txt  Carbao-205.txt  Carbao-248.txt  FA-108.txt  FA-205.txt  FAFA-205L-1.txt  FAFB-108-3.txt  FAFH-113-1.txt  O2-L12-5.txt  O2-L2-2.txt  meters_per_pixel.txt
camera_calibrate/camera_calibration_params/: 205.txt
conf/: CA-108.yml  CH-108.yml  CH-248.yml  FA-108.yml  FA-205.yml  FAFA-108-1.yml  FAFB-108-1.yml  FAFB-108-2.yml  FAFH-108-1.yml  FAFH-113-1.yml  FB-108.yml  FB-205.yml  FH-108.yml  FH-205.yml  config_birdview.yml  demo.yml
conf/Carbao_cup_observation/: CA-205.yml  CA-248.yml  CB-205.yml  CB-248.yml  CH-205.yml
conf/FA_final_observation/: FAFA-205L-1.yml  FAFB-108-3.yml  FAFB-113-1.yml  FAFB-205L-1.yml  FAFH-205L-1.yml
conf/O2_observation/: O2-L11-1.yml  O2-L11-2.yml  O2-L11-3.yml  O2-L12-1.yml  O2-L12-2.yml  O2-L12-3.yml  O2-L12-4.yml  O2-L12-5.yml  O2-L2-1.yml  O2-L2-2.yml
deep_sort/: detection.py  iou_matching.py  kalman_filter.py  linear_assignment.py  nn_matching.py  preprocessing.py  track.py  tracker.py
tools/: freeze_model.py  generate_detections.py
yolo3/: model.py  utils.py
(+11 files in other folders)
